Added Kheer recipe

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 	<h1>Odin Recipes</h1>
 	<a href="recipes/gajrela.html">Gajrela</a>
+	<a href="recipes/kheer.html">Kheer</a>
 </body>
 </html>
