--- a/recipes/gajrela.html
+++ b/recipes/gajrela.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Gajrela</h1>
-	<img src="image.jpg">
+	<img src="../images/image.jpg">
 	<p>
 		Carrot halwa is a popular sweet made in North India, and it is especially popular during winters. The traditional gajar ka halwa recipe is made with only carrots, whole (full-fat) milk, ghee and sugar; there’s no need for khoya (evaporated milk solids) or condensed milk.
 	</p>
