--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<h1>Odin Recipes</h1>
-	<a href="recipes/gajrela.html">Gajrela</a>
-	<a href="recipes/kheer.html">Kheer</a>
+	<img src="images/meme.jpeg">
+	<ul>
+	<li><a href="recipes/gajrela.html" target="_blank">Gajrela</a></li>
+	<li><a href="recipes/kheer.html" target="_blank">Kheer</a></li>
+	<li><a href="recipes/samosa.html" target="_blank">Samosa</a></li>
+</ul>
 </body>
 </html>
