Added home tags

--- a/recipes/gajrela.html
+++ b/recipes/gajrela.html
@@ -22,18 +22,24 @@
 		<li>Almonds</li>
 	</ul>
 	<h2>Steps</h2>
-		<ol>
-			<li>Boil the milk well.</li>
-			<li>Once milk is boiled, add green cardamom and grated carrots and cook at medium flame.</li>
-			<li>Once carrots become soft, press soaked rice with fingers, then add to milk and stir with spoon.</li>
-			<li>Check if rice are tender, then add sugar and mix well.</li>
-			<li>Cook at low flame.</li>
-			<li>Once gajrela becomes thick, add chopped almonds and mix with spoon.</li>
-			<li>Break rice with spoon so that it merges well in gajrela.</li>
-			<li>Once it comes to desired consistency, remove from stove.</li>
-			<li>Dish out and garnish with almonds and pistachios.</li>
-			<li>Gajrela is ready.</li>
-			<li>You can enjoy it either hot or cold, as you like!</li>
-		</ol>
+	<ol>
+		<li>Boil the milk well.</li>
+		<li>Once milk is boiled, add green cardamom and grated carrots and cook at medium flame.</li>
+		<li>Once carrots become soft, press soaked rice with fingers, then add to milk and stir with spoon.</li>
+		<li>Check if rice are tender, then add sugar and mix well.</li>
+		<li>Cook at low flame.</li>
+		<li>Once gajrela becomes thick, add chopped almonds and mix with spoon.</li>
+		<li>Break rice with spoon so that it merges well in gajrela.</li>
+		<li>Once it comes to desired consistency, remove from stove.</li>
+		<li>Dish out and garnish with almonds and pistachios.</li>
+		<li>Gajrela is ready.</li>
+		<li>You can enjoy it either hot or cold, as you like!</li>
+	</ol>
+	<div>
+		<a href="#">Top</a>
+	</div>
+	<div>
+		<a href="../index.html">Return to Home page</a>
+	</div>
 </body>
 </html>
