--- a/recipes/samosa.html
+++ b/recipes/samosa.html
@@ -38,5 +38,11 @@
 		<li>once the aloo samosa turns golden and crisp, drain off over kitchen paper.</li>
 		<li>finally, enjoy aloo samosa with green chutney and tamarind chutney.</li>
 	</ol>
+	<div>
+		<a href="#">Top</a>
+	</div>
+	<div>
+		<a href="../index.html">Return to Home page</a>
+	</div>
 </body>
 </html>
