--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<h1>Odin Recipes</h1>
 	<img src="images/meme.jpeg">
 	<ul>
-	<li><a href="recipes/gajrela.html" target="_blank">Gajrela</a></li>
-	<li><a href="recipes/kheer.html" target="_blank">Kheer</a></li>
-	<li><a href="recipes/samosa.html" target="_blank">Samosa</a></li>
+	<li><a href="recipes/gajrela.html">Gajrela</a></li>
+	<li><a href="recipes/kheer.html">Kheer</a></li>
+	<li><a href="recipes/samosa.html">Samosa</a></li>
 </ul>
 </body>
 </html>
