--- a/recipes/kheer.html
+++ b/recipes/kheer.html
@@ -38,5 +38,11 @@
 		<li> Recipe courtesy: Subbu's Kitchen
 		</li>
 	</ol>
+	<div>
+		<a href="#">Top</a>
+	</div>
+	<div>
+		<a href="../index.html">Return to Home page</a>
+	</div>
 </body>
 </html>
